--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "react": "18.2.0",
     "react-native": "0.71.10",
+    "react-native-linear-gradient": "^2.7.3",
     "styled-components": "^5.3.11"
   },
   "devDependencies": {
